# ego

./: .clang-tidy  .gitmodules  .golangci.yml  .lycheeignore  .vale.ini  404.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  _redirects  go.mod  go.sum  index.html  package.json  search-index-docs-default-current.json  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-publish.yml  golangci-lint.yml  links.yml  unittests.yml  vale.yml
assets/js/: 0e384e19.fd96921a.js  112d71cb.7d5bd343.js  167a2647.4f20c4bc.js  167a2647.fc39cc23.js  21a3a74c.d1b57080.js  2a2a0c40.136cf745.js  2a2a0c40.83f28a50.js  2a2a0c40.d0abb1f4.js  3e71ba1e.16f6afa3.js  508a7d2f.e78a4247.js  5e0defe0.e9bea32e.js  5e95c892.924b39c0.js  91c76d4c.1f14ae58.js  97c10886.180844c7.js  9a9953e7.4b8af970.js  b37cd9bb.1cb05ee8.js  e2b4f717.6b2e71ec.js  e4ee7d9e.1b88e281.js  main.0abdf254.js  main.5b2f2168.js  main.8c63dd22.js  runtime~main.24eba975.js  runtime~main.59b81cbf.js  runtime~main.9a90c53f.js  runtime~main.f770d136.js
attestation/: attestation.go  doc.go
attestation/tcbstatus/: status_string.go  tcbstatus.go
cmd/ego/: main.go  sign.go  signerid.go
cmd/integration-test/: enclave.json  main.go
cmd/marble-test/: main.go
cmd/test-marble/: enclave.conf  main.go
doc/: debugging.md  ego_cli.md
dockerfiles/: Dockerfile  Dockerfile.build  Dockerfile.build-base  Dockerfile.build-base-focal  Dockerfile.focal  Dockerfile.nightly  Dockerfile.release
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: intro.md
docs/docs/getting-started/: examples.md  install.md  troubleshoot.md
docs/docs/knowledge/: limitations.md  model.md  storage.md  tls.md
docs/docs/reference/: attest.md  cli.md  config.md
docs/docs/workflows/: build.md  debug.md
docs/src/css/: custom.css
eclient/: doc.go  eclient.go  eclient_test.go  ehost.go  ert.go  mock.go  tls.go
ecrypto/: doc.go  ecrypto.go  ecrypto_test.go
ego/: go.mod  go.sum
ego/cli/: bundle.go  bundle_test.go  cli.go  elf.go  elf_test.go  env.go  env_test.go  install.go  install_test.go  run.go  sign.go  sign_test.go  signerid.go  signerid_test.go
ego/cmd/bundle/: main.go  main_test.go
ego/cmd/clidocgen/: main.go
ego/cmd/concurrency-test/: enclave.conf  main.go
ego/cmd/ego/: main.go
ego/cmd/integration-test/: enclave.json  file_host.txt  main.go
ego/cmd/marble-test/: main.go
ego/cmd/newer-go-ver-test/: go.mod  main.go
ego/cmd/sealkeyid-test/: enclave1.json  enclave2.json  go.mod  go.sum  main.go
ego/cmd/test-marble/: enclave.conf  main.go
ego/cmd/unsupported-import-test/: go.mod  go.sum  main.go
ego/config/: config.go  config_test.go  testfile.txt
ego/ego/: main.go
ego/ego/cmd/: bundle.go  env.go  install.go  marblerun.go  root.go  run.go  sign.go  signerid.go  uniqueid.go  util.go
ego/internal/config/: config.go
ego/internal/launch/: buffer.go  errors.go  jsonifier.go  launch.go  untar.go
ego/premain/: main.go
ego/premain/core/: core.go  core_test.go  fips140_off.go  fips140_on.go
ego/test/: t.go
ehost/: ehost.go  tls.go
enclave/: doc.go  enclave.go  enclave_test.go  ert.go  ert.h  seal.go  structs.h  tls.go
getting-started/: examples.html  install.html  troubleshoot.html
getting-started/examples/: index.html
getting-started/install/: index.html
getting-started/troubleshoot/: index.html
internal/attestation/: attestation.go  attestation_test.go  claim.go  claim.h  claim_test.go  maa.go  maa_test.go  sgx_evidence.h
internal/cli/: cli.go  env.go  env_test.go  run.go  runner_test.go  sign.go  sign_test.go  signerid.go  signerid_test.go
internal/config/: config.go  config_test.go
internal/premain/: main.go
internal/premain/core/: core.go  core_test.go
internal/test/: test_sign_elf_unsigned
knowledge/: limitations.html  model.html  storage.html  tls.html
knowledge/limitations/: index.html
knowledge/model/: index.html
knowledge/storage/: index.html
knowledge/tls/: index.html
marble/: marble.go  marble_test.go
pccs/: Dockerfile  README.md  apikey.patch  setup.sh
pr-preview/pr-323/: 404.html  index.html  search-index-docs-default-current.json  sitemap.xml
pr-preview/pr-324/: 404.html  index.html  search-index-docs-default-current.json  sitemap.xml
pr-preview/pr-330/: 404.html  gtagman.js  index.html  search-index-docs-default-current.json  sitemap.xml
pr-preview/pr-330/getting-started/: examples.html  install.html  troubleshoot.html
pr-preview/pr-330/knowledge/: limitations.html  model.html  storage.html  (+1 more)
reference/: attest.html  cli.html  config.html
reference/attest/: index.html
reference/cli/: index.html
reference/config/: index.html
runner/: CMakeLists.txt  enc.cpp
samples/aks/: Dockerfile  README.md  aks.yml  public.pem
samples/attested_tls/: README.md  go.mod  go.sum  server.go
samples/azure_attestation/: README.md  go.mod  go.sum  illustration.drawio  server.go
samples/cgo/: README.md  go.mod  main.go
samples/custom_file/: README.md  enclave.json  main.go
samples/embedded_file/: README.md  enclave.json  go.mod  main.go
samples/estore/: README.md  enclave.json  go.mod  go.sum  main.go
samples/helloworld/: README.md  go.mod  helloworld.go
samples/local_attestation/: README.md  go.mod  go.sum
samples/remote_attestation/: README.md  enclave.json  go.mod  go.sum  server.go
samples/reproducible_build/: Dockerfile  README.md
samples/vault/: README.md
samples/wasmer/: README.md  c.go  enclave.json  go.mod  main.go
samples/wasmtime/: README.md  c.go  enclave.json  go.mod  go.sum  main.go
src/: bitset.h  build_ego.sh  ego-env  ego-gdb  ego-go  ego-run  enc.cpp  enclave.conf  exception_handler.cpp  exception_handler.h  gcc_libinit.c  gcc_mmap.c  go_runtime_cleanup.cpp  go_runtime_cleanup.h  install.json  integration_test.sh  load_test.sh  reserved_tls.c  snapcraft.yaml
src/symlinks/: ego  ego-gdb  ego-go
workflows/: build.html  debug.html
workflows/debug/: index.html
(+95 files in other folders)
